force-app/main/default/objects/Lead/fields/Bulk_Source__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Source__c</fullName>
    <label>Bulk Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Button</fullName>
            </value>
            <value>
                <fullName>Threshold Trip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>