force-app/main/default/objects/Lead/fields/Estimated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Quantity__c</fullName>
    <label>Estimated Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>