force-app/main/default/objects/Lead/fields/Items_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Items_of_Interest__c</fullName>
    <label>Items of Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>